--- a/standart/404.html
+++ b/standart/404.html
@@ -8,6 +8,118 @@
     <title>Standart</title>
   </head>
   <body>
+    <div class="prel">
+      <div class="prel__wrap">
+        <div class="prel__logo">
+          <svg width="800" height="100" viewBox="0 0 800 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M87.2882 71.8621C87.2882 51.5862 60.6056 43.8621 43.1748 37.7931C28.0234 32.5517 25.744 30.8966 25.744 26.4828C25.744 21.5172 31.7777 19.3103 41.4317 19.3103C53.0969 19.3103 61.9464 22.6207 61.9464 34.4828L83.3997 34.4828C83.3997 15.1724 70.3937 0 41.4317 0C17.0286 0 4.29066 9.10344 4.29066 25.6552C4.29066 44.6897 20.5147 50.2069 40.4931 57.1035C54.3037 61.931 65.8348 65.1034 65.8348 72.1379C65.8348 77.3793 61.276 80.6897 47.4654 80.6897C28.6938 80.6897 21.4533 76 21.4533 61.1034H0C0 85.6552 12.7379 100 46.795 100C75.8911 100 87.2882 88.5517 87.2882 71.8621Z" fill="#EAAC0F"/>
+            <path d="M169.163 1.37931L85.897 1.37931V20.6897L116.87 20.6897L116.87 98.6207L138.324 98.6207L138.324 20.6897L169.163 20.6897V1.37931Z" fill="#EAAC0F"/>
+            <path d="M236.814 98.6207H258.535L231.182 1.37931L186.935 1.37931L159.716 98.6207H181.438L189.885 67.4483L228.233 67.4483L236.814 98.6207ZM195.114 48.1379L206.377 6.89655L211.74 6.89655L223.003 48.1379L195.114 48.1379Z" fill="#EAAC0F"/>
+            <path d="M267.999 98.6207H289.452V20.6897L285.43 6.89655L290.793 6.89655L319.353 98.6207H361.589V1.37931L340.135 1.37931V79.3103L344.158 93.1034H338.795L310.235 1.37931L267.999 1.37931V98.6207Z" fill="#EAAC0F"/>
+            <path d="M409.97 1.37931L375.108 1.37931V98.6207L409.97 98.6207C435.177 98.6207 461.458 91.8621 461.458 49.931C461.458 8.13793 435.177 1.37931 409.97 1.37931ZM409.97 79.3103L396.561 79.3103V20.6897L409.97 20.6897C426.73 20.6897 440.004 22.069 440.004 49.931C440.004 77.931 426.73 79.3103 409.97 79.3103Z" fill="#EAAC0F"/>
+            <path d="M539.941 98.6207H561.663L534.31 1.37931L490.062 1.37931L462.844 98.6207H484.565L493.012 67.4483H531.36L539.941 98.6207ZM498.242 48.1379L509.505 6.89655L514.868 6.89655L526.131 48.1379L498.242 48.1379Z" fill="#EAAC0F"/>
+            <path d="M571.126 98.6207L592.58 98.6207V61.2323L629.586 61.2323V98.6207H651.04V64.4047C651.04 56.8185 647.017 52.6806 639.643 52.6806H625.832V47.1633C637.229 45.784 649.833 41.3702 649.833 28.5517C649.833 6.75863 630.257 1.37931 607.731 1.37931L571.126 1.37931V98.6207ZM592.58 41.9219V20.6897L607.731 20.6897C620.469 20.6897 625.832 24.0024 625.832 31.3271C625.832 38.6517 620.469 41.9219 607.731 41.9219L592.58 41.9219Z" fill="#EAAC0F"/>
+            <path d="M739.671 1.37931L656.405 1.37931V20.6897L687.378 20.6897V98.6207H708.832V20.6897L739.671 20.6897V1.37931Z" fill="#EAAC0F"/>
+            <path d="M776.009 21.6651H777.943C779.326 21.6651 780.372 21.3285 781.082 20.6553C781.792 19.9821 782.147 19.0205 782.147 17.7703C782.147 16.3854 781.801 15.4238 781.11 14.8852C780.437 14.3275 779.363 14.0486 777.887 14.0486H776.009V21.6651ZM787.472 17.6549C787.472 20.9438 786.043 23.1845 783.184 24.377L789.826 35.8306H783.913L778.532 25.8484H776.009V35.8306H770.712V9.7787H778.055C781.306 9.7787 783.688 10.4326 785.202 11.7405C786.715 13.0484 787.472 15.0199 787.472 17.6549ZM757.848 22.7902C757.848 18.9435 758.782 15.3372 760.65 11.9713C762.519 8.60545 765.088 5.95121 768.358 4.00862C771.628 2.06602 775.15 1.09473 778.924 1.09473C782.661 1.09473 786.164 2.05641 789.434 3.97977C792.704 5.90313 795.282 8.54775 797.169 11.9136C799.057 15.2795 800 18.9051 800 22.7902C800 26.5793 799.094 30.1375 797.282 33.4649C795.469 36.7923 792.928 39.4562 789.658 41.4565C786.388 43.4568 782.81 44.4569 778.924 44.4569C775.056 44.4569 771.487 43.4664 768.218 41.4853C764.948 39.485 762.397 36.8212 760.566 33.4937C758.754 30.1663 757.848 26.5985 757.848 22.7902ZM761.295 22.7902C761.295 26.06 762.08 29.0989 763.649 31.907C765.237 34.6958 767.395 36.8981 770.123 38.5137C772.851 40.1293 775.785 40.9372 778.924 40.9372C782.1 40.9372 785.052 40.1197 787.78 38.4849C790.508 36.8308 792.648 34.6189 794.199 31.8493C795.768 29.0604 796.553 26.0407 796.553 22.7902C796.553 19.559 795.759 16.5393 794.171 13.7312C792.601 10.9039 790.443 8.68239 787.696 7.06676C784.968 5.45114 782.044 4.64333 778.924 4.64333C775.785 4.64333 772.861 5.44152 770.151 7.03791C767.461 8.6343 765.312 10.8366 763.705 13.6447C762.098 16.4528 761.295 19.5013 761.295 22.7902Z" fill="#EAAC0F"/>
+          </svg>
+          <div class="prel__logoО"></div>
+        </div>
+        <div class="prel__o"></div>
+      </div>
+    </div>
+
+    <header class="header">
+      <div class="row align-items-end ">
+        <div class="col-xl-3 offset-xl-1 col-lg-3 offset-lg-1 col-md-7 offset-md-1 col-12 offset-1">
+          <a href="#">
+            <svg class="w-100" width="179" height="22" viewBox="0 0 179 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M19.4716 15.8097C19.4716 11.349 13.5194 9.64965 9.6311 8.31448C6.25124 7.16138 5.74276 6.79724 5.74276 5.82621C5.74276 4.73379 7.08873 4.24828 9.24226 4.24828C11.8445 4.24828 13.8185 4.97655 13.8185 7.58621H18.6042C18.6042 3.33793 15.7029 0 9.24226 0C3.7986 0 0.957127 2.00276 0.957127 5.64414C0.957127 9.83172 4.57627 11.0455 9.03289 12.5628C12.1136 13.6248 14.6859 14.3228 14.6859 15.8703C14.6859 17.0234 13.669 17.7517 10.5882 17.7517C6.40079 17.7517 4.78564 16.72 4.78564 13.4428H0C0 18.8441 2.84147 22 10.4387 22C16.9292 22 19.4716 19.4814 19.4716 15.8097Z" fill="#363636"/>
+              <path d="M37.7355 0.303448L19.1612 0.303448V4.55172L26.0705 4.55172L26.0705 21.6966H30.8561L30.8561 4.55172L37.7355 4.55172V0.303448Z" fill="#363636"/>
+              <path d="M52.8266 21.6966L57.6721 21.6966L51.5704 0.303448L41.7 0.303448L35.6282 21.6966H40.4737L42.358 14.8386L50.9123 14.8386L52.8266 21.6966ZM43.5245 10.5903L46.037 1.51724L47.2334 1.51724L49.7459 10.5903L43.5245 10.5903Z" fill="#363636"/>
+              <path d="M59.7831 21.6966H64.5687V4.55172L63.6714 1.51724L64.8678 1.51724L71.2387 21.6966L80.6604 21.6966V0.303448L75.8748 0.303448V17.4483L76.7721 20.4828H75.5757L69.2048 0.303448L59.7831 0.303448V21.6966Z" fill="#363636"/>
+              <path d="M91.4529 0.303448L83.6762 0.303448V21.6966H91.4529C97.076 21.6966 102.938 20.2097 102.938 10.9848C102.938 1.79034 97.076 0.303448 91.4529 0.303448ZM91.4529 17.4483H88.4618V4.55172L91.4529 4.55172C95.1916 4.55172 98.1527 4.85517 98.1527 10.9848C98.1527 17.1448 95.1916 17.4483 91.4529 17.4483Z" fill="#363636"/>
+              <path d="M120.446 21.6966L125.291 21.6966L119.19 0.303448L109.319 0.303448L103.248 21.6966H108.093L109.977 14.8386L118.532 14.8386L120.446 21.6966ZM111.144 10.5903L113.656 1.51724L114.853 1.51724L117.365 10.5903L111.144 10.5903Z" fill="#363636"/>
+              <path d="M127.402 21.6966H132.188V14.171L140.443 14.171V21.6966L145.229 21.6966V14.869C145.229 13.2 144.332 12.2897 142.687 12.2897H139.606V11.0759C142.148 10.7724 144.96 9.80138 144.96 6.28138C144.96 1.4869 140.593 0.303448 135.568 0.303448L127.402 0.303448V21.6966ZM132.188 9.92276V4.55172L135.568 4.55172C138.409 4.55172 140.174 4.55173 140.174 7.25242C140.174 9.92276 138.409 9.92276 135.568 9.92276H132.188Z" fill="#363636"/>
+              <path d="M165 0.303448L146.426 0.303448V4.55172L153.335 4.55172V21.6966H158.121V4.55172L165 4.55172V0.303448Z" fill="#363636"/>
+              <path d="M173.632 4.84871H174.065C174.374 4.84871 174.608 4.7734 174.767 4.62277C174.926 4.47215 175.005 4.25697 175.005 3.97725C175.005 3.66739 174.928 3.45222 174.773 3.33172C174.623 3.20692 174.382 3.14451 174.052 3.14451H173.632V4.84871ZM176.197 3.95142C176.197 4.68733 175.877 5.18869 175.237 5.4555L176.724 8.01825H175.4L174.196 5.78472H173.632V8.01825H172.447V2.18913H174.09C174.817 2.18913 175.35 2.33545 175.689 2.62809C176.028 2.92073 176.197 3.36184 176.197 3.95142ZM169.568 5.10046C169.568 4.23976 169.777 3.43285 170.195 2.67973C170.614 1.92662 171.188 1.33273 171.92 0.898077C172.652 0.463421 173.44 0.246094 174.284 0.246094C175.12 0.246094 175.904 0.46127 176.636 0.891622C177.367 1.32197 177.944 1.91371 178.367 2.66682C178.789 3.41994 179 4.23115 179 5.10046C179 5.94826 178.797 6.74441 178.392 7.48892C177.986 8.23343 177.418 8.82946 176.686 9.27703C175.954 9.7246 175.154 9.94838 174.284 9.94838C173.419 9.94838 172.62 9.72675 171.889 9.28349C171.157 8.83592 170.586 8.23988 170.177 7.49537C169.771 6.75086 169.568 5.95256 169.568 5.10046ZM170.34 5.10046C170.34 5.83206 170.515 6.51202 170.866 7.14033C171.222 7.76434 171.705 8.2571 172.315 8.61859C172.925 8.98009 173.582 9.16084 174.284 9.16084C174.995 9.16084 175.655 8.97794 176.266 8.61214C176.876 8.24203 177.355 7.74713 177.702 7.12742C178.053 6.50341 178.229 5.82776 178.229 5.10046C178.229 4.37747 178.051 3.70182 177.696 3.07351C177.344 2.44089 176.862 1.94383 176.247 1.58234C175.637 1.22084 174.982 1.04009 174.284 1.04009C173.582 1.04009 172.928 1.21869 172.321 1.57588C171.719 1.93307 171.239 2.42583 170.879 3.05414C170.519 3.68245 170.34 4.36456 170.34 5.10046Z" fill="#363636"/>
+            </svg>
+          </a>
+        </div>
+        <div class="col-xl-8 offset-xl-4 col-lg-7 offset-lg-4 d-none d-lg-block">
+          <div class="header__menu">
+            <ul>
+              <li>
+                <a href="#">спецтехника</a>
+              </li>
+              <li>
+                <a href="#">ремзона</a>
+              </li>
+              <li>
+                <a href="#">услуги</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 d-none d-lg-block">
+          <div class="header__menu">
+            <ul>
+              <li>
+                <a href="#">проекты</a>
+              </li>
+              <li>
+                <a href="#">o компании</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xl-1 offset-xl-2 col-lg-3 offset-lg-1 d-none d-lg-none">
+          <a href="#" class="p1">контакты</a>
+        </div>
+        <div class="d-lg-none col-md-2 offset-md-13 col-3 offset-7">
+          <svg class="burger"  width="40" height="12" viewBox="0 0 40 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M40 1L0 1" stroke="#363636" stroke-width="2"/>
+            <path d="M40 11L0 11" stroke="#363636" stroke-width="2"/>
+          </svg>
+        </div>
+      </div>
+    </header>
+    <div class="menu">
+      <div class="row p-t-200 p-b-160">
+        <div class="col-xl-2 offset-xl-16 col-lg-2 offset-lg-13 col-md-7 offset-md-1 col-8 offset-1">
+          <div class="aFirst__menu">
+            <ul>
+              <li><a href="#">О компании</a></li>
+              <li><a href="#">Преимущества</a></li>
+              <li><a href="#">Работы</a></li>
+              <li><a href="#">Документы</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xl-2 offset-xl-1 col-lg-2 offset-lg-1 col-md-7 offset-md-1 col-8 offset-1">
+          <div class="aFirst__menu">
+            <ul>
+              <li><a href="#">Реквизиты</a></li>
+              <li><a href="#">Вакансии</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-24"></div>
+        <div class="col-xl-4 offset-xl-19 col-lg-4 offset-lg-16 col-md-7 offset-md-9 col-18 offset-1 m-t-40 ">
+          <a class="p1" href="tel:+78123208404">+7 (812) 320-84-04</a>
+        </div>
+        <div class="col-24"></div>
+        <div class="col-xl-2 offset-xl-16 col-lg-2 offset-lg-13 col-md-7 offset-md-1 col-18 offset-1 m-t-40 ">
+          <p class="p1" >ул. Возрождения,
+            д. 20А, литер А офис №3</p>
+        </div>
+      </div>
+      <svg class="menu__svg" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M25 0V25H0L25 0Z" fill="#363636"/>
+      </svg>
+    </div>
+    <div class="menuBg"></div>
+
+
     <div class="p404">
       <div class="p404__bg"></div>
       <div class="p404__line"></div>
@@ -43,3 +155,45 @@
     </div>
   </body>
 </html>
+
+<script>
+  function preloader(){
+    let prel = document.querySelector(".prel");
+    if(prel){
+        let logo   = prel.querySelector('.prel__logo svg');
+        let logoOr = prel.querySelector('.prel__logoО');
+        let prelOr = prel.querySelector('.prel__o');
+        console.log(logo  )
+        console.log(logoOr)
+        console.log(prelOr)
+        logoOr.style.transform='translateX(0)';
+        setInterval(() => {
+          logo.style.opacity="1";
+          logoOr.style.transform='translateX(110%)';
+          setInterval(() => {
+            prelOr.style.transform='translateX(0)';
+            setInterval(() => {
+              prel.style.transform='translateX(100%)';
+              setInterval(() => {
+                prel.style.display='none';
+          }, 800);
+          }, 800);
+          }, 800);
+        }, 800);
+    }
+  }
+  preloader();
+
+
+ function toggleMenu(){
+  function clickMenu(){
+    document.querySelector('body').classList.toggle('openMenu');
+  }
+  document.querySelector('.burger').addEventListener('click', clickMenu);
+  document.querySelector('.menuBg').addEventListener('click', clickMenu);
+  document.querySelectorAll('.menu a').forEach(el=>{
+    el.addEventListener('click', clickMenu);
+  })
+ }
+ toggleMenu();
+</script>
