--- a/RRT/index.html
+++ b/RRT/index.html
@@ -9,85 +9,92 @@
 </head>
 <body>
   <div class="" data-scroll-container>
-    <section data-scroll-section class="mFirst">
+    <section data-scroll-section class="mFirst p-t-320 m-b-320">
       <div class="row">
         <div class="col-20 offset-2">
           <div class="mFirst__head">
             <div class="mFirst__head1">
-              <h2 data-scroll class="h1"><span class="violetL">РОСТ</span></h2>
+              <h2 data-scroll class="h1 mp0"><span class="violetL">РОСТ</span></h2>
             </div>
+            <div class="col-24 d-md-none"></div>
             <div class="mFirst__head2">
-              <h2 class="h1"><span class="violetL">РАЗВИТИЕ</span><br>ТАЛАНТ</h2>
+              <h2 class="h1 text-right"><span class="violetL">РАЗВИТИЕ</span><br>ТАЛАНТ</h2>
             </div>
             <div class="mFirst__head3">
-              <p class="p1">Гимназия РРТ реализуем программу начального общего образования с углубленным изучением иностранных языков, основ востоковедения и культурологии.</p>
+              <p class="span1">Гимназия РРТ реализуем программу начального общего образования с углубленным изучением иностранных языков, основ востоковедения и культурологии.</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-21 offset-2">
+      <div class="row m-b-120 p-t-50">
+        <div class="col-21 offset-2 ">
           <div class="line"></div>
         </div>
       </div>
       <div class="row">
-        <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 d-none d-lg-block"></div>
-        <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 col-md-21 offset-md-2 col-21 offset-2 "></div>
+        <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 d-none d-lg-block">
+          <div class="btn2"></div>
+        </div>
+        <div class="col-xl-16 offset-xl-0 col-lg-16 offset-lg-0 col-md-21 offset-md-2 col-21 offset-2 ">
+          <div class="mFirst__imgW">
+            <img src="img/main/1.jpg" alt="">
+          </div>
+        </div>
       </div>
     </section>
-    <section data-scroll-section class="mMission">
-      <div class="row">
+    <section data-scroll-section class="mMission m-b-240">
+      <div class="row align-items-end">
         <div class="col-xl-10 offset-xl-6 col-lg-10 offset-lg-6 col-md-10 offset-md-6 col-15 offset-2">
-          <span class="violetL">Миссия гимназии</span> – подготовить воспитанников к успешной и счастливой жизни в современном обществе. 
+          <h3 data-scroll data-scroll-repeat="true" class="h3 mMission__title fade-in t-05 t-d-03"><span class="violetL ">Миссия гимназии</span> – подготовить воспитанников к успешной и счастливой жизни в современном обществе. </h3>
         </div>
         <div class="col-xl-3 offset-xl-4 col-lg-3 offset-lg-4 col-md-3 offset-md-4 col-4 offset-2">
-  
+          <div class="btn2"></div>
         </div>
-        <div class="col-21 offset-2">
+        <div class="col-21 offset-2 m-b-120 m-t-50">
           <div class="line"></div>
         </div>
       </div>
       <div class="row">
-        <div class="col-xl-4 offset-xl-9 col-lg-4 offset-lg-9 col-md-4 offset-md-9 col-9 offset-2">
-          <p class="p1"><span class="violetL">//01</span></p>
-          <div class="line"></div>
+        <div class="col-xl-4 offset-xl-9 col-lg-4 offset-lg-9 col-md-4 offset-md-9 col-9 offset-2 p-b-80">
+          <p class="p2"><span class="violetL">//01</span></p>
+          <div class="line m-t-10 m-b-20"></div>
           <p data-scroll class="p1">Современное оборудование</p>
         </div>
-        <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 col-md-4 offset-md-1 col-9 offset-3">
-          <p class="p1"><span class="violetL">//02</span></p>
-          <div class="line"></div>
+        <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 col-md-4 offset-md-1 col-9 offset-3 p-b-80">
+          <p class="p2"><span class="violetL">//02</span></p>
+          <div class="line m-t-10 m-b-20"></div>
           <p class="p1">Нет домашних заданий</p>
         </div>
-        <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 col-md-4 offset-md-1 col-9 offset-2">
-          <p class="p1"><span class="violetL">//03</span></p>
-          <div class="line"></div>
+        <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 col-md-4 offset-md-1 col-9 offset-2 p-b-80">
+          <p class="p2"><span class="violetL">//03</span></p>
+          <div class="line m-t-10 m-b-20"></div>
           <p class="p1">Мультилингвальное обучение</p>
         </div>
-        <div class="col-xl-4 offset-xl-9 col-lg-4 offset-lg-9 col-md-4 offset-md-9 col-9 offset-3">
-          <p class="p1"><span class="violetL">//04</span></p>
-          <div class="line"></div>
+        <div class="col-xl-4 offset-xl-9 col-lg-4 offset-lg-9 col-md-4 offset-md-9 col-9 offset-3 p-b-80">
+          <p class="p2"><span class="violetL">//04</span></p>
+          <div class="line m-t-10 m-b-20"></div>
           <p class="p1">Здоровое сбалансированное питание</p>
         </div>
-        <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 col-md-4 offset-md-1 col-9 offset-2">
-          <p class="p1"><span class="violetL">//05</span></p>
-          <div class="line"></div>
+        <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 col-md-4 offset-md-1 col-9 offset-2 p-b-80">
+          <p class="p2"><span class="violetL">//05</span></p>
+          <div class="line m-t-10 m-b-20"></div>
           <p class="p1">Охраняемая территория</p>
         </div>
-        <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 col-md-4 offset-md-1 col-9 offset-3">
-          <p class="p1"><span class="violetL">//06</span></p>
-          <div class="line"></div>
+        <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 col-md-4 offset-md-1 col-9 offset-3 p-b-80">
+          <p class="p2"><span class="violetL">//06</span></p>
+          <div class="line m-t-10 m-b-20"></div>
           <p class="p1">Находимся в историческом центре Санкт-Петербурга</p>
         </div>
       </div>
     </section>
-    <div data-scroll-section class="imgParalax">
-      <img src="" alt="">
+    <div data-scroll-section class="imgParalax m-b-320">
+      <img data-scroll data-scroll-speed="5" src="/img/main/2.jpg" alt="">
     </div>
   
-    <section data-scroll-section class="mNews">
-      <div class="row">
+    <section data-scroll-section class="mNews p-b-240">
+      <div class="row align-items-end">
         <div class="col-xl-3 offset-xl-2 col-lg-3 offset-lg-2 col-md-3 offset-md-2 col-4 offset-2">
-  
+          <div class="btn2"></div>
         </div>
         <div class="col-xl-7 offset-xl-4 col-lg-7 offset-lg-4 col-md-7 offset-md-4 col-12 offset-3">
           <h3 class="h3">Мы ценим каждый момент в жизни нашей школы и наших учеников</h3>
@@ -95,35 +102,85 @@
         <div class="col-xl-2 offset-xl-5 col-lg-2 offset-lg-3 col-md-4 offset-md-4 col-4 offset-2 d-none d-md-block">
           <p class="p1 text-right"><span class="violetL" >//&nbsp;новости</span></p>
         </div>
-        <div class="col-21 offset-2">
+        <div class="col-21 offset-2 m-b-120 m-t-50">
           <div class="line"></div>
         </div>
       </div>
       <div class="row">
         <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 col-md-9 offset-md-2 col-21 offset-2 d-none d-lg-block"></div>
         <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-9 offset-md-2 col-21 offset-2">
-          <a href="#" class="news__item">
-            <p class="p1">21.03.2021</p>
+          <a href="#" class="news__item m-b-50">
+            <p class="p1 m-b-80">21.03.2021</p>
             <div class="d-flex align-items-center justify-content-between">
-              <p class="p1">Открытие Начальной школы. Снова вместе!</p>
+              <p class="p1 mp0">Открытие Начальной школы. Снова вместе!</p>
               <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M8.78711 30H51.2135M51.2135 30L30.0003 8.7868M51.2135 30L30.0003 51.2132" stroke="#878787"/>
               </svg>
             </div>
           </a>
         </div>
-        <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-9 offset-md-2 col-21 offset-2"></div>
-        <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 col-md-9 offset-md-2 col-21 offset-2"></div>
-        <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-9 offset-md-2 col-21 offset-2"></div>
+        <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-9 offset-md-2 col-21 offset-2">
+          <a href="#" class="news__item m-b-50">
+            <p class="p1 m-b-80">21.03.2021</p>
+            <div class="d-flex align-items-center justify-content-between">
+              <p class="p1 mp0">Открытие Начальной школы. Снова вместе!</p>
+              <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.78711 30H51.2135M51.2135 30L30.0003 8.7868M51.2135 30L30.0003 51.2132" stroke="#878787"/>
+              </svg>
+            </div>
+          </a>
+        </div>
+        <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 col-md-9 offset-md-2 col-21 offset-2">
+           <a href="#" class="news__item m-b-50">
+            <p class="p1 m-b-80">21.03.2021</p>
+            <div class="d-flex align-items-center justify-content-between">
+              <p class="p1 mp0">Открытие Начальной школы. Снова вместе!</p>
+              <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.78711 30H51.2135M51.2135 30L30.0003 8.7868M51.2135 30L30.0003 51.2132" stroke="#878787"/>
+              </svg>
+            </div>
+          </a>
+        </div>
+        <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-9 offset-md-2 col-21 offset-2">
+                  <a href="#" class="news__item m-b-50">
+            <p class="p1 m-b-80">21.03.2021</p>
+            <div class="d-flex align-items-center justify-content-between">
+              <p class="p1 mp0">Открытие Начальной школы. Снова вместе!</p>
+              <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.78711 30H51.2135M51.2135 30L30.0003 8.7868M51.2135 30L30.0003 51.2132" stroke="#878787"/>
+              </svg>
+            </div>
+          </a>
+        </div>
         <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-9 offset-md-2 col-21 offset-2 d-none d-lg-block"></div>
-        <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 col-md-9 offset-md-2 col-21 offset-2"></div>
+        <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 col-md-9 offset-md-2 col-21 offset-2">
+        <a href="#" class="news__item m-b-50">
+            <p class="p1 m-b-80">21.03.2021</p>
+            <div class="d-flex align-items-center justify-content-between">
+              <p class="p1 mp0">Открытие Начальной школы. Снова вместе!</p>
+              <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.78711 30H51.2135M51.2135 30L30.0003 8.7868M51.2135 30L30.0003 51.2132" stroke="#878787"/>
+              </svg>
+            </div>
+          </a>
+        </div>
         <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-9 offset-md-2 col-21 offset-2 d-none d-lg-block"></div>
-        <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-9 offset-md-2 col-21 offset-2"></div>
+        <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-9 offset-md-2 col-21 offset-2">
+        <a href="#" class="news__item m-b-50">
+            <p class="p1 m-b-80">21.03.2021</p>
+            <div class="d-flex align-items-center justify-content-between">
+              <p class="p1 mp0">Открытие Начальной школы. Снова вместе!</p>
+              <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.78711 30H51.2135M51.2135 30L30.0003 8.7868M51.2135 30L30.0003 51.2132" stroke="#878787"/>
+              </svg>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
-    <section data-scroll-section class="form">
+    <section data-scroll-section class="form p-t-240">
       <div class="row">
-        <div class="col-21 offset-2">
+        <div class="col-21 offset-2 m-b-80">
           <div class="line"></div>
         </div>
         <div class="col-xl-3 offset-xl-2 col-lg-3 offset-lg-2 col-md-3 offset-md-2 d-none d-md-block">
@@ -163,23 +220,26 @@
         <div class="col-xl-3 offset-xl-7 col-lg-4 offset-lg-4 col-md-4 offset-md-4 d-none d-md-block">
           <p class="p1 text-right"><span class="violetL" >//&nbsp;обратная связь</span></p>
         </div>
-        <div class="col-21 offset-2">
+        <div class="col-21 offset-2 m-b-120 p-t-50">
           <div class="line"></div>
         </div>
       </div>
       <div class="row">
-        <div class="col-xl-7 offset-xl-11 col-lg-7 offset-lg-11 col-md-7 offset-md-11 col-12 offset-2">
+        <div class="col-xl-7 offset-xl-11 col-lg-7 offset-lg-11 col-md-7 offset-md-11 col-12 offset-2 m-b-40">
           <input type="text" placeholder="Имя" >
         </div>
-        <div class="col-xl-7 offset-xl-11 col-lg-7 offset-lg-11 col-md-7 offset-md-11 col-12 offset-2">
+        <div class="col-xl-7 offset-xl-11 col-lg-7 offset-lg-11 col-md-7 offset-md-11 col-12 offset-2 m-b-40">
           <input type="text" placeholder="Телефон" >
         </div>
-        <div class="col-xl-12 offset-xl-11 col-lg-12 offset-lg-11 col-md-12 offset-md-11 col-21 offset-2">
+        <div class="col-xl-12 offset-xl-11 col-lg-12 offset-lg-11 col-md-12 offset-md-11 col-21 offset-2 m-b-40">
           <input type="text" placeholder="Сообщение" >
         </div>
-        <div class="col-xl-3 offset-xl-20 col-lg-3 offset-lg-20 col-md-3 offset-md-20 col-4 offset-19"></div>
+        <div class="col-xl-3 offset-xl-20 col-lg-3 offset-lg-20 col-md-3 offset-md-20 col-4 offset-19 m-b-40">
+            <div class="btn2"></div>
+          </div>
       </div>
     </section>
+
   </div>
   
 
