--- a/shum/children.html
+++ b/shum/children.html
@@ -8,35 +8,68 @@
   <title>Shum About</title>
 </head>
 <body>
-  <section class="chFirst">
-    <div class="row">
+  <section class="chFirst bg_b1 ">
+    <div class="row chFirst__main m-b-80">
       <div class="col-xl-9 offset-xl-2 col-lg-9 offset-lg-2 col-md-15 offset-md-2 col-20 offset-2">
-        <h1 class="h1">
-          <span class="h1">ШКОЛА <span class="p2">/ обучение с «0», материалы<br> включены в стоимость</span></span>
+        <h1 class="h1 ">
+          <span class="h1 chFirst__title">ШКОЛА <span class="p2 chFirst__titleSmall">/ обучение с «0», материалы<br> включены в стоимость</span></span>
           <spam class="h1 ttu green offset-3">юного</spam>
           <spam class="h1 ttu offset-2">ювелира</spam>
         </h1>
       </div>
     </div>
-  </section>
-  <section class="chMaster">
-    <div class="row">
-      <div class="col-xl-9 offset-xl-2 col-lg-9 offset-lg-2 d-none d-lg-block">
-        <img src="" alt="" class="w-100">
+    <img src="img/children/1sm.jpg" alt="" class="w-100 d-lg-none">
+    <img src="img/children/1xl.jpg" alt="" class="chFirst__img d-none d-lg-block">
+    <div class="row z-5">
+      <div class="col-24">
+        <div class="line m-b-25"></div>
       </div>
-      <div class="col-xl-6 offset-xl-6 col-lg-6 offset-lg-6 col-md-16 offset-md-7 col-16 offset-7">
-        <img src="" alt="" class="w-100">
+      <div class="col-xl-5 offset-xl-6 col-lg-5 offset-lg-6 col-md-6 offset-md-3 col-6 offset-1">
+        <a href="#" class="cap ttu">/ группа выходного дня</a>
+      </div>
+      <div class="col-xl-2 offset-xl-3 col-lg-2 offset-lg-3 col-md-3 offset-md-1 col-6 offset-3">
+        <a href="#" class="cap d-inline-block ttu p-b-15">/ воскресенье</a><br>
+        <a href="#" class="cap d-inline-block ttu">/ 12.00-14.30</a>
+      </div>
+      <div class="col-xl-2 offset-xl-1 col-lg-2 offset-lg-1 col-md-3 offset-md-3 col-6 offset-1">
+        <a href="#" class="cap ttu">/ 1 500 ₽ </a>
+      </div>
+      <div class="col-24">
+        <div class="line m-t-50 m-b-25"></div>
+      </div>
+      <div class="col-xl-5 offset-xl-6 col-lg-5 offset-lg-6 col-md-6 offset-md-3 col-6 offset-1">
+        <a href="#" class="cap ttu">/ Вечерняя форма обучения</a>
+      </div>
+      <div class="col-xl-2 offset-xl-3 col-lg-2 offset-lg-3 col-md-3 offset-md-1 col-6 offset-3">
+        <a href="#" class="cap d-inline-block ttu p-b-15">/ будние дни</a><br>
+        <a href="#" class="cap d-inline-block ttu">/ 16.00-18.30</a>
+      </div>
+      <div class="col-xl-2 offset-xl-1 col-lg-2 offset-lg-1 col-md-3 offset-md-3 col-6 offset-1">
+        <a href="#" class="cap d-inline-block ttu ">/ 1 500 ₽ </a><br>
+      </div>
+      <div class="col-24">
+        <div class="line m-t-50 "></div>
       </div>
     </div>
+  </section>
+  <section class="chMaster bg_b1 p-t-250 p-b-250">
     <div class="row">
+      <div class="col-xl-9 offset-xl-2 col-lg-9 offset-lg-2 d-none d-lg-block">
+        <img src="img/children/2.jpg" alt="" class="w-100">
+      </div>
+      <div class="col-xl-6 offset-xl-6 col-lg-6 offset-lg-6 col-md-16 offset-md-7 col-16 offset-7">
+        <img src="img/children/3.jpg" alt="" class="w-100">
+      </div>
+    </div>
+    <div class="row h2 chMaster__title ">
       <div class="col-xl-10 offset-xl-12 col-lg-10 offset-lg-12 col-md-15 offset-md-2 col-20 offset-3">
-        <h3 class="h2 ttu green">БОЛЬШОЙ ВЫБОР</h3>
+        <h3 class="h2 ttu green ">БОЛЬШОЙ ВЫБОР</h3>
       </div>
       <div class="col-xl-8 offset-xl-15 col-lg-8 offset-lg-15 col-md-15 offset-md-5 col-17 offset-6">
         <h3 class="h2 ttu">МАСТЕР-КЛАССОВ</h3>
       </div>
     </div>
-    <div class="row">
+    <div class="row m-b-80">
       <div class="col-xl-5 offset-xl-15 col-lg-6 offset-lg-15 col-md-12 offset-md-5 col-17 offset-6">
         <p class="p1">
           Мы предлагаем юным посетителям большой выбор мастер-классов в течение учебного года и циклы занятий во время каникул по различным ювелирным техникам. Все рабочие операции проводятся с соблюдением техники безопасности, под руководством и контролем преподавателя.
@@ -51,7 +84,7 @@
         <p class="p1">РАЗНООБРАЗИЕ КУРСОВ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">02</p>
@@ -60,7 +93,7 @@
         <p class="p1">НЕТ ВОЗРАСТНЫХ ОГРАНИЧЕНИЙ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">03</p>
@@ -69,7 +102,7 @@
         <p class="p1">РАЗНЫЕ ФОРМЫ ОБУЧЕНИЯ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">04</p>
@@ -78,28 +111,28 @@
         <p class="p1">НЕБОЛЬШИЕ ГРУППЫ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10"></div>
       </div>
     </div>
   </section>
-  <section class="chInfo">
+  <section class="chInfo p-t-250 p-b-250">
     <div class="row">
       <div class="col-xl-12 offset-xl-11 col-lg-12 offset-lg-11 col-md-11 offset-md-12 col-16 offset-7">
-        <img src="" alt="" class="chInfo__img">
+        <img src="img/children/5.jpg" alt="" class="w-100 chInfo__img">
       </div>
     </div>
-    <div class="row">
+    <div class="row m-b-80">
       <div class="col-xl-10 offset-xl-6 col-lg-10 offset-lg-6 col-md-15 offset-md-5 col-21 offset-2">
-        <h3 class="h2">
+        <h3 class="h2 chInfo__title">
           <span class="h2 green ttu offset-3">Обучение проходит</span>
           <span class="h2 green ttu">в теплой И душевной</span>
-          <span class="h2">обстановке </span>
+          <span class="h2 ttu">обстановке </span>
         </h3>
       </div>
     </div>
     <div class="row">
       <div class="col-xl-7 offset-xl-2 col-lg-7 offset-lg-2 col-md-8 offset-md-2 d-none d-md-block">
-        <img src="" alt="" class="w-100">
+        <img src="img/children/4.jpg" alt="" class="w-100">
       </div>
       <div class="col-xl-5 offset-xl-2 col-lg-6 offset-lg-2 col-md-11 offset-md-2 col-21 offset-2">
         <p class="p1">
