--- a/shum/about.html
+++ b/shum/about.html
@@ -9,64 +9,71 @@
 </head>
 <body>
 
-  <section class="aFirst">
+  <section class="aFirst bg_b1 p-t-250">
     <div class="row">
-      <div class="col-24">
+      <div class="col-24 m-b-80">
         <div class="line"></div>
       </div>
 
       <div class="col-xl-15 offset-xl-7 col-lg-15 offset-lg-7 col-md-18 offset-md-2 col-18 offset-2">
         <h1 class="h2 green ttu">НОВАТОРЫ В ОБУЧЕНИИ</h1>
       </div>
-      <div class="col-xl-13 offset-xl-9 col-lg-13 offset-lg-9 col-md-18 offset-md-4 col-18 offset-4"></div>
+      <div class="col-xl-13 offset-xl-9 col-lg-13 offset-lg-9 col-md-18 offset-md-4 col-18 offset-4">
         <h2 class="h2 ttu">взрослых ЮВЕЛИРНОМУ&nbsp;ДЕЛУ</h2>
-      <div class="col-24">
+      </div>
+      <div class="col-24 m-t-25 m-b-25">
         <div class="line"></div>
       </div>
       <div class="col-xl-2 offset-xl-9 col-lg-2 offset-lg-9 col-md-4 offset-md-11 col-6 offset-4">
         <a href="" class="p1">история</a>
       </div>
       <div class="col-xl-2 offset-xl-3 col-lg-2 offset-lg-3 col-md-4 offset-md-2 col-10 offset-1">
-        <a href="" class="p1">преподаватели</a>
-        <a href="" class="p1">преимущества</a>
+        <a href="" class="p1 d-inline-block m-b-15">преподаватели</a>
+        <a href="" class="p1 d-inline-block">преимущества</a>
       </div>
-      <div class="col-24">
+      <div class="col-24 m-t-50">
         <div class="line"></div>
       </div>
     </div>
   </section>
-  <div class="imgPar">
-    <img src="" alt="">
+  <div class="imgPar bg_b1 ">
+    <img src="img/m1.jpg" alt="">
   </div>
-  <div class="aNums">
+  <div class="aNums bg_b1 ">
     <div class="row">
-      <div class="col-24">
+      <div class="col-24 m-b-80">
         <div class="line"></div>
       </div>
       <div class="col-xl-6 offset-xl-9 col-lg-6 offset-lg-9 col-md-10 offset-md-4 col-19 offset-4">
-        <p class="h1"><p class="h1 green">/</p>2001 <p class="p2">год создания</p></p>
+        <p class="h1"><span class="h1 green">/</span>2001 <span class="cap">год создания</span></p>
       </div>
       <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 col-md-8 offset-md-1 col-15 offset-8">
-        <p class="h1"><p class="h1 green">/</p>28 <p class="p2">учебных программ</p></p>
+        <p class="h1"><span class="h1 green">/</span>28 <span class="cap">учебных программ</span></p>
+      </div>
+      <div class="col-24 m-b-80">
+        <div class="line"></div>
       </div>
       <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 col-md-10 offset-md-2 col-22 offset-2">
-        <p class="h1"><p class="h1 green">/</p>90 <p class="p2">процентов практики</p></p>
+        <p class="h1"><span class="h1 green">/</span>90 <span class="cap">процентов практики</span></p>
       </div>
       <div class="col-xl-6 offset-xl-6 col-lg-6 offset-lg-6 col-md-10 offset-md-1 col-15 offset-7">
-        <p class="h1"><p class="h1 green">/</p>16 <p class="p2">преподавателей</p></p>
+        <p class="h1"><span class="h1 green">/</span>16 <span class="cap">преподавателей</span></p>
+      </div>
+      <div class="col-24 m-b-80">
+        <div class="line"></div>
       </div>
     </div>
   </div>
-  <section class="aAbout">
+  <section class="aAbout bg_b1 p-t-350">
     <div class="row">
       <div class="col-xl-16 offset-xl-7 col-lg-16 offset-lg-7 col-md-21 offset-md-2 col-21 offset-2">
-        <img src="" alt="" class="aAbout__img">
+        <img src="img/about/1.jpg" alt="" class="w-100 aAbout__img">
       </div>
     </div>
-    <div class="row">
+    <div class="row m-b-80">
       <div class="col-xl-20 offset-xl-2 col-lg-20 offset-lg-2 col-md-20 offset-md-2 col-21 offset-2">
-        <h3 class="h2 ttu">Мы верим, что совместная
-          деятельность влюбленных
+        <h3 class="h2 ttu">Мы верим, что совместная<br>
+          деятельность влюбленных<br>
           <span class="h2 ttu offset-3">в свое дело профессионалов </span>
         </h3>
       </div>
@@ -76,7 +83,7 @@
         </h3>
       </div>
     </div>
-    <div class="row">
+    <div class="row m-b-150">
       <div class="col-xl-5 offset-xl-11 col-lg-5 offset-lg-11 col-md-8 offset-md-4 col-21 offset-2">
         <p class="p1">Школа является площадкой для обмена опытом и повышения квалификации специалистов. Поэтому, она изначально развивалась в двух направлениях: обучение с «нуля» и повышение квалификации опытных мастеров.</p>
       </div>
@@ -92,7 +99,7 @@
         <p class="p1">РАЗНООБРАЗИЕ КУРСОВ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">02</p>
@@ -101,7 +108,7 @@
         <p class="p1">НЕТ ВОЗРАСТНЫХ ОГРАНИЧЕНИЙ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">03</p>
@@ -110,7 +117,7 @@
         <p class="p1">РАЗНЫЕ ФОРМЫ ОБУЧЕНИЯ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">04</p>
@@ -119,18 +126,21 @@
         <p class="p1">НЕБОЛЬШИЕ ГРУППЫ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
     </div>
   </section>
 
-  <section class="aHistory">
+  <section class="aHistory p-t-250">
     <div class="row">
       <div class="col-xl-9 offset-xl-14 col-lg-9 offset-lg-14 col-md-11 offset-md-12 col-14 offset-9">
-        <h2 class="h1"> <span class="h1 offset-4">история</span>
-        <span class="h2 green">
+        <h2 class="h1"> <span class="h1 ttu offset-4">история</span><br>
+        <span class="h1 ttu green">
           ШКОЛЫ
         </span></h2>
+      </div>
+      <div class="col-24">
+        <div class="line m-t-25 m-b-80"></div>
       </div>
     </div>
     <div class="row">
@@ -138,20 +148,23 @@
     </div>
 
   </section>
-  <img src="" alt="" class="w-100">
-  <section class="mAdvantages">
-    <div class="row">
+  <img src="img/m5.svg" alt="" class="w-100 bg_b1 p-b-250">
+  <section class="mAdvantages bg_b1 p-b-250">
+    <div class="imgPar">
+      <img src="img/m1.jpg" alt="">
+    </div>
+    <div class="row m-b-250">
       <div class="col-xl-13 offset-xl-5 col-lg-13 offset-lg-5 col-md-21 offset-md-2 col-21 offset-2">
-        <h3 class="h1 green">Ведущий </h3>
+        <h3 class="h1 ttu green mAdvantages__titleCol1">Ведущий </h3>
       </div>
       <div class="col-xl-13 offset-xl-7 col-lg-13 offset-lg-7 col-md-17 offset-md-5 col-21 offset-2">
-        <h3 class="h1">профильный </h3>
+        <h3 class="h1 ttu">профильный </h3>
       </div>
       <div class="col-xl-13 offset-xl-7 col-lg-13 offset-lg-7 col-md-17 offset-md-5 col-21 offset-2">
-        <h3 class="h1">образовательный</h3>
+        <h3 class="h1 ttu">образовательный</h3>
       </div>
       <div class="col-xl-13 offset-xl-5 col-lg-13 offset-lg-5 col-md-21 offset-md-2 col-21 offset-2">
-        <h3 class="h1">центр&nbsp;России <span class="p1">
+        <h3 class="h1 ttu mAdvantages__titleCol4">центр&nbsp;России <span class="p1">
           куда приезжают учиться профессии<br>
           «Ювелир» со всех городов России и<br>
           стран ближнего и дальнего зарубежья
@@ -159,11 +172,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-24">
+      <div class="col-24 m-b-25">
         <div class="line line_big line_green"></div>
       </div>
       <div class="col-xl-5 offset-xl-17 col-lg-5 offset-lg-17 col-md-5 offset-md-17 col-8 offset-14">
-        <a href="" class="btn1 btn1_green ttu">ПОДРОБНЕЕ</a>
+        <a href="" class="btn1 green ttu">ПОДРОБНЕЕ</a>
       </div>
     </div>
     <div class="row">
@@ -174,7 +187,7 @@
         <p class="p1">РАЗНООБРАЗИЕ КУРСОВ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">02</p>
@@ -183,7 +196,7 @@
         <p class="p1">НЕТ ВОЗРАСТНЫХ ОГРАНИЧЕНИЙ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">03</p>
@@ -192,7 +205,7 @@
         <p class="p1">РАЗНЫЕ ФОРМЫ ОБУЧЕНИЯ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">04</p>
@@ -201,7 +214,7 @@
         <p class="p1">НЕБОЛЬШИЕ ГРУППЫ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">05</p>
@@ -210,21 +223,21 @@
         <p class="p1">МАСТЕРСКИЕ И КЛАССЫ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">06</p>
       </div>
-      <div class="col-xl-7 offset-xl-12 col-lg-7 offset-lg-12 col-md-7 offset-md-12 col-14 offset-2">
+      <div class="col-xl-7 offset-xl-12 col-lg-7 offset-lg-12 col-md-14 offset-md-12 col-14 offset-2">
         <p class="p1">ПРЕПОДАВАТЕЛИ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
     </div>
   </section>
 
-  <section class="aTeacher">
+  <section class="aTeacher p-t-250 p-b-250">
     <div class="row">
       <div class="col-xl-7 offset-xl-11 col-lg-7 offset-lg-11 col-md-7 offset-md-12 col-15 offset-8">
         <h2 class="h2 ttu green">преподаватели</h2>
@@ -235,19 +248,19 @@
       <div class="slider"></div>
     </div>
   </section>
-  <section class="aText">
-    <div class="row">
+  <section class="aText bg_b2 p-t-250 p-b-250">
+    <div class="row align-items-end">
       <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 d-none d-lg-block">
-        <img src="" alt="" class="w-100">
+        <img src="img/about/2.jpg" alt="" class="w-100">
       </div>
       <div class="col-xl-9 offset-xl-6 col-lg-9 offset-lg-6 col-md-16 offset-md-7 col-16 offset-7">
-        <img src="" alt="" class="w-100">
+        <img src="img/about/3.jpg" alt="" class="w-100">
       </div>
     </div>
-    <div class="row">
+    <div class="row m-b-50">
       <div class="col-xl-9 offset-xl-9 col-lg-9 offset-lg-9 col-md-15 offset-md-2 col-20 offset-2">
-        <h4 class="h2">
-          <span class="h2 ttu offset-4">новое поколение,<br> ориентированное</span>
+        <h4 class="h2 aText__title">
+          <span class="h2 ttu offset-4">новое поколение,<br> ориентированное</span><br>
           <span class="h2 ttu green">на авторский дизайн и<br>
             высококлассную работу</span>
         </h4>
