--- a/shum/index.html
+++ b/shum/index.html
@@ -8,8 +8,8 @@
   <title>Shum</title>
 </head>
 <body>
-  <section class="mFirst">
-    <div class="row">
+  <section class="mFirst bg_b1">
+    <div class="mFirst__main row m-b-80 z-5">
       <div class="col-xl-11 offset-xl-2 col-lg-11 offset-lg-2 col-md-17 offset-md-2 col-21 offset-2">
         <h1 class="h1">ШКОЛА <span class="p1">/ профильный образовательный центр </span></h1>
       </div>
@@ -20,30 +20,66 @@
         <h2 class="h1">МАСТЕРСТВА</h2>
       </div>
     </div>
+    <div class="row z-5">
+      <div class="col-24">
+        <div class="line m-b-25"></div>
+      </div>
+      <div class="col-xl-2 offset-xl-9 col-lg-2 offset-lg-9 col-md-3 offset-md-7 col-6 offset-1">
+        <a href="#" class="cap ttu">ОТЗЫВЫ</a>
+      </div>
+      <div class="col-xl-2 offset-xl-3 col-lg-2 offset-lg-3 col-md-3 offset-md-1 col-6 offset-3">
+        <a href="#" class="cap ttu">соБЫТИЯ</a>
+      </div>
+      <div class="col-xl-2 offset-xl-1 col-lg-2 offset-lg-1 col-md-3 offset-md-3 col-6 offset-1">
+        <a href="#" class="cap ttu">ПОРТФОЛИО</a>
+      </div>
+      <div class="col-24">
+        <div class="line m-t-50 m-b-25"></div>
+      </div>
+      <div class="col-xl-2 offset-xl-9 col-lg-2 offset-lg-9 col-md-3 offset-md-7 col-6 offset-1">
+        <!-- <a href="#" class="cap ttu">ОТЗЫВЫ</a> -->
+      </div>
+      <div class="col-xl-2 offset-xl-3 col-lg-2 offset-lg-3 col-md-3 offset-md-1 col-6 offset-3">
+        <a href="#" class="cap ttu">соБЫТИЯ</a>
+      </div>
+      <div class="col-xl-2 offset-xl-1 col-lg-2 offset-lg-1 col-md-3 offset-md-3 col-6 offset-1">
+        <a href="#" class="cap d-inline-block ttu p-b-15">ПОРТФОЛИО</a><br>
+        <a href="#" class="cap d-inline-block ttu">ПОРТФОЛИО</a>
+      </div>
+      <div class="col-24">
+        <div class="line m-t-50 m-b-25"></div>
+      </div>
+    </div>
     <div class="row d-flex d-lg-none">
-      <video width="400" height="300" poster="video/duel.jpg">
+      <video width="400" height="300" poster="img/bgM.jpg">
         <source src="video/duel.ogv" type='video/ogg; codecs="theora, vorbis"'>
         <source src="video/duel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
         <source src="video/duel.webm" type='video/webm; codecs="vp8, vorbis"'>
       </video>
     </div>
+    <video class="mFirst__vid d-none d-lg-block" width="400" height="300" poster="img/bgM.jpg">
+      <source src="video/duel.ogv" type='video/ogg; codecs="theora, vorbis"'>
+      <source src="video/duel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+      <source src="video/duel.webm" type='video/webm; codecs="vp8, vorbis"'>
+    </video>
   </section>
-  <div class="imgPar">
-    <img src="" alt="">
+  <div class="bg_b1 p-t-350"></div>
+  <div class="imgPar ">
+    <img src="img/m1.jpg" alt="">
   </div>
-  <section class="mAdvantages">
-    <div class="row">
-      <div class="col-xl-13 offset-xl-5 col-lg-13 offset-lg-5 col-md-21 offset-md-2 col-21 offset-2">
-        <h3 class="h1 green">Ведущий </h3>
+  <section class="mAdvantages bg_b1">
+    <div class="row m-b-100">
+      <div class="col-xl-13 offset-xl-5 col-lg-13 offset-lg-5 col-md-21 offset-md-2 col-21 offset-2 ">
+        <h3 class="h1 ttu green mAdvantages__titleCol1">Ведущий </h3>
       </div>
       <div class="col-xl-13 offset-xl-7 col-lg-13 offset-lg-7 col-md-17 offset-md-5 col-21 offset-2">
-        <h3 class="h1">профильный </h3>
+        <h3 class="h1 ttu">профильный </h3>
       </div>
       <div class="col-xl-13 offset-xl-7 col-lg-13 offset-lg-7 col-md-17 offset-md-5 col-21 offset-2">
-        <h3 class="h1">образовательный</h3>
+        <h3 class="h1 ttu">образовательный</h3>
       </div>
-      <div class="col-xl-13 offset-xl-5 col-lg-13 offset-lg-5 col-md-21 offset-md-2 col-21 offset-2">
-        <h3 class="h1">центр&nbsp;России <span class="p1">
+      <div class="col-xl-16 offset-xl-5 col-lg-16 offset-lg-5 col-md-21 offset-md-2 col-21 offset-2">
+        <h3 class="h1 ttu mAdvantages__titleCol4">центр&nbsp;России <span class="p1 d-inline-grid">
           куда приезжают учиться профессии<br>
           «Ювелир» со всех городов России и<br>
           стран ближнего и дальнего зарубежья
@@ -51,11 +87,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-24">
+      <div class="col-24 m-b-25">
         <div class="line line_big line_green"></div>
       </div>
       <div class="col-xl-5 offset-xl-17 col-lg-5 offset-lg-17 col-md-5 offset-md-17 col-8 offset-14">
-        <a href="" class="btn1 btn1_green ttu">ПОДРОБНЕЕ</a>
+        <a href="" class="btn1 green ttu">ПОДРОБНЕЕ</a>
       </div>
     </div>
     <div class="row">
@@ -66,7 +102,7 @@
         <p class="p1">РАЗНООБРАЗИЕ КУРСОВ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">02</p>
@@ -75,7 +111,7 @@
         <p class="p1">НЕТ ВОЗРАСТНЫХ ОГРАНИЧЕНИЙ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">03</p>
@@ -84,7 +120,7 @@
         <p class="p1">РАЗНЫЕ ФОРМЫ ОБУЧЕНИЯ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">04</p>
@@ -93,7 +129,7 @@
         <p class="p1">НЕБОЛЬШИЕ ГРУППЫ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">05</p>
@@ -102,7 +138,7 @@
         <p class="p1">МАСТЕРСКИЕ И КЛАССЫ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
       <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-1 offset-md-2 col-2 offset-2">
         <p class="p1">06</p>
@@ -111,80 +147,100 @@
         <p class="p1">ПРЕПОДАВАТЕЛИ</p>
       </div>
       <div class="col-24">
-        <div class="line"></div>
+        <div class="line m-t-10 m-b-50"></div>
       </div>
     </div>
   </section>
-  <section class="cource">
-    <div class="row">
+  <section class="cource p-t-250">
+    <div class="row m-b-100 ">
       <div class="col-xl-7 offset-xl-7 col-lg-7 offset-lg-7 col-md-14 offset-md-7 col-14 offset-7">
-        <h2 class="h2 green">Учебные</h2>
+        <h2 class="h2 ttu green">Учебные</h2>
       </div>
       <div class="col-xl-7 offset-xl-9 col-lg-7 offset-lg-9 col-md-14 offset-md-9 col-14 offset-9">
-        <h2 class="h2">программы</h2>
+        <h2 class="h2 ttu">программы</h2>
       </div>
     </div>
-    <div class="row">
+    <div class="row m-b-80">
       <div class="col-xl-4 offset-xl-2 col-lg-4 offset-lg-2 col-md-9 offset-md-2 col-20 offset-2">
-        <a href="#" class="cource__item">
+        <a href="#" class="cource__item m-b-80">
           <span class="p1">01</span>
           <p class="p1">Индивидуальные стажировки и повышение квалификации</p>
         </a>
       </div>
-      <div class="col-xl-3 offset-xl-1 col-lg-3 offset-lg-1 col-md-9 offset-md-2 col-20 offset-2"></div>
-      <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 col-md-9 offset-md-2 col-20 offset-2"></div>
-      <div class="col-xl-3 offset-xl-1 col-lg-3 offset-lg-1 col-md-9 offset-md-2 col-20 offset-2"></div>
-      <div class="col-xl-3 offset-xl-1 col-lg-3 offset-lg-1 col-md-9 offset-md-2 col-20 offset-2"></div>
+      <div class="col-xl-3 offset-xl-1 col-lg-3 offset-lg-1 col-md-9 offset-md-2 col-20 offset-2">
+        <a href="#" class="cource__item m-b-80">
+          <span class="p1">01</span>
+          <p class="p1">Курс 3D-моделирование ювелирных изделий в программе Phinoceros</p>
+        </a>
+      </div>
+      <div class="col-xl-4 offset-xl-1 col-lg-4 offset-lg-1 col-md-9 offset-md-2 col-20 offset-2">
+        <a href="#" class="cource__item m-b-80">
+          <span class="p1">01</span>
+          <p class="p1">Индивидуальные стажировки и повышение квалификации</p>
+        </a>
+      </div>
+      <div class="col-xl-3 offset-xl-1 col-lg-3 offset-lg-1 col-md-9 offset-md-2 col-20 offset-2">
+        <a href="#" class="cource__item m-b-80">
+          <span class="p1">01</span>
+          <p class="p1">Курс Изготовление резиновых пресс-форм для литья ювелирных изделий</p>
+        </a>
+      </div>
+      <div class="col-xl-3 offset-xl-1 col-lg-3 offset-lg-1 col-md-9 offset-md-2 col-20 offset-2">
+        <a href="#" class="cource__item m-b-80">
+          <span class="p1">01</span>
+          <p class="p1">Индивидуальные стажировки и повышение квалификации</p>
+        </a>
+      </div>
     </div>
 
-    <div class="row">
+    <div class="row p-b-250">
       <div class="col-24">
         <div class="line line_big line_green"></div>
       </div>
       <div class="col-xl-5 offset-xl-17 col-lg-5 offset-lg-17 col-md-5 offset-md-17 col-8 offset-14">
-        <a href="" class="btn1 btn1_green ttu">все программы</a>
+        <a href="" class="btn1 green ttu">все программы</a>
       </div>
     </div>
 
   </section>
-  <section class="mPortfolio">
-    <div class="row">
-      <div class="col-24">
+  <section class="mPortfolio p-t-250 p-b-250 bg_b1">
+    <div class="row m-b-80">
+      <div class="col-24 m-b-80">
         <div class="line"></div>
       </div>
       <div class="col-xl-15 offset-xl-7 col-lg-15 offset-lg-7 col-md-20 offset-md-2 col-20 offset-2">
-        <h2 class="h2">высококлассная работа</h2>
+        <h2 class="h2 ttu">высококлассная работа</h2>
       </div>
       <div class="col-xl-10 offset-xl-12 col-lg-10 offset-lg-12 col-md-12 offset-md-10 col-18 offset-3">
-        <h2 class="h2 green">и авторский дизайн</h2>
+        <h2 class="h2 ttu green">и авторский дизайн</h2>
       </div>
-      <div class="col-24">
+      <div class="col-24 m-t-25">
         <div class="line"></div>
       </div>
     </div>
-    <div class="row">
+    <div class="row ">
       <div class="col-xl-5 offset-xl-2 col-lg-5 offset-lg-2 d-none d-lg-block"></div>
       <div class="col-xl-7 offset-xl-2 col-lg-7 offset-lg-2 col-md-10 offset-md-2 col-21 offset-2">
-        <img src="" alt="" class="w-100">
+        <img src="img/m2.jpg" alt="" class="w-100">
       </div>
       <div class="col-xl-6 offset-xl-1 col-lg-6 offset-lg-1 col-md-10 offset-md-1 d-none d-md-block"></div>
     </div>
   </section>
-  <section class="rev">
+  <section class="rev p-t-250 p-b-250">
     <div class="row">
       <div class="col-xl-7 offset-xl-15 col-lg-7 offset-lg-15 col-md-7 offset-md-14 col-14 offset-7">
         <h2 class="h2 green ttu">отзывы</h2>
       </div>
-      <div class="col-24">
+      <div class="col-24 m-b-25 m-t-25">
         <div class="line"></div>
       </div>
     </div>
     <div class="row">
       <div class="col-2 offset-2"><p class="h5">01</p></div>
       <div class="col-xl-6 offset-xl-3 col-lg-6 offset-lg-3 col-md-14 offset-md-3 col-16 offset-3">
-        <p class="h5">«‎В школе царит творческая, вдохновляющая атмосфера, по-семейному тепло и хорошо, <p class="p1 green">а самое главное происходит стопроцентное погружение в сферу ювелирного искусства»</p></p>
+        <p class="h5 d-inline">«‎В школе царит творческая, вдохновляющая атмосфера, по-семейному тепло и хорошо, <p class="h5 d-inline green">а самое главное происходит стопроцентное погружение в сферу ювелирного искусства»</p></p>
       </div>
-      <div class="col-24">
+      <div class="col-24 m-b-25 m-t-150">
         <div class="line"></div>
       </div>
 
@@ -192,30 +248,28 @@
       <div class="col-xl-6 offset-xl-7 col-lg-6 offset-lg-6 col-md-14 offset-md-5 col-14 offset-5">
         <p class="h5">«‎Я знала с самого начала, что Школа Ювелирного Мастерства — это правильный выбор»</p></p>
       </div>
-      <div class="col-24">
+      <div class="col-24 m-b-25 m-t-150">
         <div class="line"></div>
       </div>
 
       <div class="col-2 offset-2"><p class="h5">03</p></div>
       <div class="col-xl-6 offset-xl-5 col-lg-6 offset-lg-5 col-md-14 offset-md-4 col-14 offset-4">
-        <p class="h5">«‎К ювелирному делу приобщилась впервые в стенах вашей школы и какой же был восторг, <p class="p1 green">когда под бдительным оком преподавателей все получилось»</p></p>
+        <p class="h5 d-inline">«‎К ювелирному делу приобщилась впервые в стенах вашей школы и какой же был восторг, <p class="h5 green d-inline">когда под бдительным оком преподавателей все получилось»</p></p>
       </div>
-      <div class="col-24">
-        <div class="line"></div>
-      </div>
+      
     </div>
 
-    <div class="row">
-      <div class="col-24">
+    <div class="row m-t-150">
+      <div class="col-24 m-b-15">
         <div class="line line_big line_green"></div>
       </div>
       <div class="col-xl-5 offset-xl-17 col-lg-5 offset-lg-17 col-md-5 offset-md-17 col-8 offset-14">
-        <a href="" class="btn1 btn1_green ttu">все отзывы</a>
+        <a href="" class="btn1 green ttu">все отзывы</a>
       </div>
     </div>
   </section>
-  <section class="form">
-    <div class="row">
+  <section class="form bg_b1 ">
+    <div class="row p-t-250 m-b-80">
       <div class="col-xl-10 offset-xl-7 col-lg-10 offset-lg-7 col-md-10 offset-md-7 col-18 offset-2">
         <h4 class="h2 ttu">ОСТАЛИСЬ ВОПРОСЫ?</h4>
       </div>
@@ -224,7 +278,7 @@
       </div>
     </div>
     <div class="form__form">
-      <div class="row">
+      <div class="row m-b-100">
         <div class="col-xl-5 offset-xl-11 col-lg-5 offset-lg-11 col-md-12 offset-md-11 col-21 offset-2">
           <input type="text" placeholder="Имя">
         </div>
@@ -236,26 +290,26 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-24">
+      <div class="row p-b-250">
+        <div class="col-24 p-b-15">
           <div class="line line_big line_green"></div>
         </div>
         <div class="col-xl-5 offset-xl-11 col-lg-5 offset-lg-11 col-md-5 offset-md-11 col-8 offset-2">
-          <a href="" class="btn1 btn1_green ttu">отправить</a>
+          <a href="" class="btn1 green ttu">отправить</a>
         </div>
       </div>
     </div>
   </section>
-  <img src="" alt="" class="w-100">
-  <section class="mChildren">
+  <img src="img/m5.svg" alt="" class="w-100">
+  <section class="mChildren p-t-250">
     <div class="row">
       <div class="col-xl-12 offset-xl-11 col-lg-12 offset-lg-11 col-md-11 offset-md-12 col-16 offset-7">
-        <img class="mChildren__img1" src="" alt="">
+        <img class="mChildren__img1" src="img/m3.jpg" alt="">
       </div>
     </div>
-    <div class="mChildren__title">
+    <div class="mChildren__title m-b-80">
       <div class="col-xl-12 offset-xl-7 col-lg-12 offset-lg-7 col-md-17 offset-md-4 col-16 offset-4">
-        <h3 class="h2 green ttu">школа юного</h3>
+        <h3 class="h2 green ttu mChildren__titleCol1">школа юного</h3>
       </div>
       <div class="col-xl-12 offset-xl-5 col-lg-12 offset-lg-5 col-md-17 offset-md-2 col-16 offset-2">
         <h3 class="h2 ttu">ювелира</h3>
@@ -263,7 +317,7 @@
     </div>
     <div class="row">
       <div class="col-xl-7 offset-xl-2 col-lg-7 offset-lg-2 col-md-8 offset-md-2 d-none d-md-block">
-        <img src="" alt="" class="w-100">
+        <img src="img/m4.jpg" alt="" class="w-100">
       </div>
       <div class="col-xl-6 offset-xl-2 col-lg-6 offset-lg-2 col-md-11 offset-md-2 col-21 offset-2">
         <p class="p1">Мы предлагаем юным посетителям большой выбор мастер-классов в течение учебного года и циклы занятий во время каникул по различным ювелирным техникам. Все рабочие операции проводятся с соблюдением техники безопасности, под руководством и контролем преподавателя.</p>
