--- a/shum/about.html
+++ b/shum/about.html
@@ -72,7 +72,7 @@
     </div>
     <div class="row m-b-80">
       <div class="col-xl-20 offset-xl-2 col-lg-20 offset-lg-2 col-md-20 offset-md-2 col-21 offset-2">
-        <h3 class="h2 ttu">Мы верим, что совместная<br>
+        <h3 class="h2 ttu" style="margin-top: -3.3em;">Мы верим, что совместная<br>
           деятельность влюбленных<br>
           <span class="h2 ttu offset-3">в свое дело профессионалов </span>
         </h3>
@@ -131,7 +131,7 @@
     </div>
   </section>
 
-  <section class="aHistory p-t-250 p-b-250">
+  <section class="aHistory p-t-250 p-b-250 overflow-hidden">
     <div class="row">
       <div class="col-xl-9 offset-xl-14 col-lg-9 offset-lg-14 col-md-11 offset-md-12 col-14 offset-9">
         <h2 class="h1"> <span class="h1 ttu offset-4">история</span><br>
@@ -350,7 +350,7 @@
               <!-- <p class="p1">04</p> -->
             </div>
             <div class="col-xl-7 offset-xl-10 col-lg-7 offset-lg-10 col-md-14 offset-md-10 col-14 offset-2">
-              <p class="p1">На сегодняшний день Школа ювелирного мастерства осуществляет подготовку по 28 учебным программам. Это мастер-классы, краткосрочные и долгосрочные курсы практически по всем ювелирным специализациям. Набор в группы ведется круглый год.</p>
+              <p class="p1" >На сегодняшний день Школа ювелирного мастерства осуществляет подготовку по 28 учебным программам. Это мастер-классы, краткосрочные и долгосрочные курсы практически по всем ювелирным специализациям. Набор в группы ведется круглый год.</p>
 
             </div>
             <div class="col-24">
@@ -427,7 +427,7 @@
     </div>
   </section>
 
-  <section class="aTeacher p-t-250 p-b-250">
+  <section class="aTeacher p-t-250 p-b-250 overflow-hidden ">
     <div class="row m-b-80">
       <div class="col-xl-7 offset-xl-11 col-lg-7 offset-lg-11 col-md-7 offset-md-12 col-15 offset-8 m-b-25">
         <h2 class="h2 ttu green">преподаватели</h2>
@@ -508,7 +508,7 @@
         </div>
       </div>
       <div class="col-24 m-b-50"></div>
-      <div class="col-xl-4 offset-xl-3 col-lg-4 offset-lg-3 col-md-6 offset-md-6 col-8 offset-8">
+      <div class="col-xl-4 offset-xl-3 col-lg-4 offset-lg-3 col-md-6 offset-md-6 col-8 offset-0">
         <div class="swiper-container team2Swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
